# heimdalerp

./: .env.example  .gitignore  README.md  dev_launch.sh  pyproject.toml
Authentication/: api_urls.py  models.py
authentication/: serializers.py  views.py
contact/: models.py
core/models/: core_models.py  geo.py
core/serializers/: geo.py
core/urls.py/: geo.py
core/views/: geo.py
geo/: models.py
heimdalerp/: apps_loader.py  settings.py  urls.py
modules_management/: apps.py  models.py
persons/: models.py
requirements/: requirements.txt
