[tool.poetry]
name = "heimdalerp"
version = "0.1.0"
description = ""
authors = ["Dawda Borje Kujabi <dawdaborjekujabi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.10"
django-rest-knox = "5.0.0"
django-cors-headers = "^4.6.0"
django-jazzmin = "^3.0.1"
packaging = "^24.2"
django-phonenumber-field = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
